<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="monri.com.terminalemulator.order.OrderPreviewActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/order_preview_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <TextView
            android:id="@+id/order_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:padding="7dp"
            android:text="@string/order_summary"
            android:textAlignment="center"
            android:textSize="18sp" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/order_summary"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_part"
            android:layout_below="@id/separator"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:scrollbars="vertical" />

        <FrameLayout
            android:id="@+id/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_part"
            android:layout_below="@id/separator"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/payment_in_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <ProgressBar
                android:id="@+id/payment_in_progress_loading"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/payment_in_progress_loading"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:text="@string/payment_in_progress" />

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_above="@+id/bottom_part"
            android:background="@drawable/black_white_gradient" />

        <RelativeLayout
            android:id="@+id/bottom_part"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true">


            <TextView
                android:id="@+id/total_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/total_amount"
                android:layout_toStartOf="@+id/total_amount"
                android:text="@string/total"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/total_placeholder"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="1500 DIN" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/contactless_payment"
                    android:textAlignment="center" />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
